# resint

./: .gitignore  LICENSE  NOTICE.md  start-dev.ps1
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.prod.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/app/: main.py
backend/docker/: backup.sh  entrypoint.sh  init-db.sh  restore_backup.sh  restore_check.sh
backend/scripts/: bulk_create_users.py  check_migration_safety.py  create_manager.py  create_test_data_raw.py  create_test_user.py  create_test_warehouse_and_item.py  init_db.py  set_user_password.py  split_inventory_router.py  users_seed_team_2026-02-26.csv  users_seed_template.csv  users_update_full_names_2026-02-26.csv  users_update_managers_no_station_2026-02-26.csv
backend/tests/: conftest.py  test_auth_and_health.py  test_auth_catalog_contract.py  test_bulk_upsert_dedup.py  test_error_codes.py  test_inventory_audit.py  test_inventory_export.py  test_inventory_flow.py  test_inventory_idempotency.py  test_inventory_negative.py  test_inventory_optimistic_lock.py  test_inventory_progress.py  test_inventory_recent_events.py  test_inventory_reports.py  test_inventory_session_close_snapshot.py  test_inventory_station_assignment.py  test_item_categories.py  test_item_quantity_constraints.py  test_item_units.py  test_items_alias_search.py  test_items_catalog_management.py  test_items_import_export.py  test_items_recent_frequent.py  test_items_search.py  test_postgres_contract.py  test_stations.py  (+2 more)
(+213 files in other folders)
